libs/fleet/sdk-bindings/swift/CyclopsSdkFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef struct UniffiVTableCallbackInterfaceAccessTokenProvider {
    UniffiCallbackInterfaceFree _Nonnull uniffiFree;
    UniffiCallbackInterfaceClone _Nonnull uniffiClone;
    UniffiCallbackInterfaceAccessTokenProviderMethod0 _Nonnull getAccessToken;
} UniffiVTableCallbackInterfaceAccessTokenProvider;
typedef struct UniffiVTableCallbackInterfaceHttpClient {
    UniffiCallbackInterfaceFree _Nonnull uniffiFree;
    UniffiCallbackInterfaceClone _Nonnull uniffiClone;
    UniffiCallbackInterfaceHttpClientMethod0 _Nonnull execute;
} UniffiVTableCallbackInterfaceHttpClient;
uint64_t uniffi_cyclops_sdk_fn_clone_cyclopsclient(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_cyclopsclient(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_init_callback_vtable_accesstokenprovider(const UniffiVTableCallbackInterfaceAccessTokenProvider* _Nonnull vtable
);
uint64_t uniffi_cyclops_sdk_fn_method_accesstokenprovider_get_access_token(uint64_t ptr, int8_t force_refresh
);
uint64_t uniffi_cyclops_sdk_fn_clone_httpclient(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_httpclient(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_init_callback_vtable_httpclient(const UniffiVTableCallbackInterfaceHttpClient* _Nonnull vtable
);
uint64_t uniffi_cyclops_sdk_fn_constructor_createclaimrequestbuilder_new(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_labels(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_name(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_pool(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_spec(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_createpoolrequestbuilder_new(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_fn_method_createpoolrequestbuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createpoolrequestbuilder_namespace(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createpoolrequestbuilder_spec(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_createsignedserviceurlrequestbuilder_new(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_expires_in_seconds(uint64_t ptr, uint32_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_label(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_sandbox(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_service(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_clone_createtemplaterequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_createtemplaterequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_createtemplaterequestbuilder_new(RustCallStatus *_Nonnull out_status

);
uint64_t uniffi_cyclops_sdk_fn_clone_createuserapikeyrequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_createuserapikeyrequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_clone_cyclopscredentials(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_cyclopscredentials(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_clone_cyclopstokenproviderconfigurationbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_cyclopstokenproviderconfigurationbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_clone_httprequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_httprequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_clone_templatebuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_templatebuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_cyclops_sdk_fn_func_fleet_label_key(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_fn_func_healthy_pool_display_status(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_fn_func_pool_display_status(RustBuffer pool, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_cyclops_sdk_fn_func_removed_pool_display_status(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_fn_func_terminating_pool_display_status(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_fn_func_unknown_pool_display_status(RustCallStatus *_Nonnull out_status

);