libs/fleet/sdk-bindings/python/fleet_sdk/_sdk.py

_UniffiLib.uniffi_cyclops_sdk_fn_clone_createtemplaterequestbuilder.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_free_createtemplaterequestbuilder.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_free_createtemplaterequestbuilder.restype = None
_UniffiLib.uniffi_cyclops_sdk_fn_clone_createuserapikeyrequestbuilder.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_clone_createuserapikeyrequestbuilder.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_free_createuserapikeyrequestbuilder.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_free_createuserapikeyrequestbuilder.restype = None
_UniffiLib.uniffi_cyclops_sdk_fn_clone_cyclopsclient.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_clone_cyclopsclient.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_free_cyclopsclient.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_free_cyclopsclient.restype = None
_UniffiLib.uniffi_cyclops_sdk_fn_clone_cyclopscredentials.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_clone_cyclopscredentials.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_free_cyclopscredentials.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_free_cyclopscredentials.restype = None
_UniffiLib.uniffi_cyclops_sdk_fn_clone_cyclopstokenproviderconfigurationbuilder.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_clone_cyclopstokenproviderconfigurationbuilder.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_free_cyclopstokenproviderconfigurationbuilder.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_free_cyclopstokenproviderconfigurationbuilder.restype = None
_UniffiLib.uniffi_cyclops_sdk_fn_clone_httpclient.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_clone_httpclient.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_free_httpclient.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_free_httpclient.restype = None
_UniffiLib.uniffi_cyclops_sdk_fn_clone_httprequestbuilder.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_clone_httprequestbuilder.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_free_httprequestbuilder.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_free_httprequestbuilder.restype = None
_UniffiLib.uniffi_cyclops_sdk_fn_clone_templatebuilder.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_clone_templatebuilder.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_free_templatebuilder.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_free_templatebuilder.restype = None
class _UniffiForeignFutureResultRustBuffer(ctypes.Structure):
    _fields_ = [
        ("return_value", _UniffiRustBuffer),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETERUST_BUFFER = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureResultRustBuffer,
)
_UNIFFI_CALLBACK_INTERFACE_FLEET_SDK_ACCESS_TOKEN_PROVIDER_METHOD0 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,ctypes.c_int8,_UNIFFI_FOREIGN_FUTURE_COMPLETERUST_BUFFER,ctypes.c_uint64,ctypes.POINTER(_UniffiForeignFutureDroppedCallbackStruct),
)
_UNIFFI_CALLBACK_INTERFACE_CLONE_FLEET_SDK_ACCESS_TOKEN_PROVIDER = ctypes.CFUNCTYPE(ctypes.c_uint64,ctypes.c_uint64,
)
_UNIFFI_CALLBACK_INTERFACE_FREE_FLEET_SDK_ACCESS_TOKEN_PROVIDER = ctypes.CFUNCTYPE(None,ctypes.c_uint64,
)
class _UniffiVTableCallbackInterfaceFleetSdkAccessTokenProvider(ctypes.Structure):
    _fields_ = [
        ("uniffi_free", _UNIFFI_CALLBACK_INTERFACE_FREE_FLEET_SDK_ACCESS_TOKEN_PROVIDER),
        ("uniffi_clone", _UNIFFI_CALLBACK_INTERFACE_CLONE_FLEET_SDK_ACCESS_TOKEN_PROVIDER),
        ("get_access_token", _UNIFFI_CALLBACK_INTERFACE_FLEET_SDK_ACCESS_TOKEN_PROVIDER_METHOD0),
    ]
_UniffiLib.uniffi_cyclops_sdk_fn_init_callback_vtable_accesstokenprovider.argtypes = (
    ctypes.POINTER(_UniffiVTableCallbackInterfaceFleetSdkAccessTokenProvider),
)
_UniffiLib.uniffi_cyclops_sdk_fn_init_callback_vtable_accesstokenprovider.restype = None
_UNIFFI_CALLBACK_INTERFACE_FLEET_SDK_HTTP_CLIENT_METHOD0 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiRustBuffer,_UNIFFI_FOREIGN_FUTURE_COMPLETERUST_BUFFER,ctypes.c_uint64,ctypes.POINTER(_UniffiForeignFutureDroppedCallbackStruct),
)
_UNIFFI_CALLBACK_INTERFACE_CLONE_FLEET_SDK_HTTP_CLIENT = ctypes.CFUNCTYPE(ctypes.c_uint64,ctypes.c_uint64,
)
_UNIFFI_CALLBACK_INTERFACE_FREE_FLEET_SDK_HTTP_CLIENT = ctypes.CFUNCTYPE(None,ctypes.c_uint64,
)
class _UniffiVTableCallbackInterfaceFleetSdkHttpClient(ctypes.Structure):
    _fields_ = [
        ("uniffi_free", _UNIFFI_CALLBACK_INTERFACE_FREE_FLEET_SDK_HTTP_CLIENT),
        ("uniffi_clone", _UNIFFI_CALLBACK_INTERFACE_CLONE_FLEET_SDK_HTTP_CLIENT),
        ("execute", _UNIFFI_CALLBACK_INTERFACE_FLEET_SDK_HTTP_CLIENT_METHOD0),
    ]
_UniffiLib.uniffi_cyclops_sdk_fn_init_callback_vtable_httpclient.argtypes = (
    ctypes.POINTER(_UniffiVTableCallbackInterfaceFleetSdkHttpClient),
)
_UniffiLib.uniffi_cyclops_sdk_fn_init_callback_vtable_httpclient.restype = None
_UniffiLib.uniffi_cyclops_sdk_fn_func_fleet_label_key.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_func_fleet_label_key.restype = _UniffiRustBuffer
_UniffiLib.uniffi_cyclops_sdk_fn_func_healthy_pool_display_status.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_func_healthy_pool_display_status.restype = _UniffiRustBuffer
_UniffiLib.uniffi_cyclops_sdk_fn_func_pool_display_status.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_func_pool_display_status.restype = _UniffiRustBuffer
_UniffiLib.uniffi_cyclops_sdk_fn_func_removed_pool_display_status.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_func_removed_pool_display_status.restype = _UniffiRustBuffer
_UniffiLib.uniffi_cyclops_sdk_fn_func_terminating_pool_display_status.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_func_terminating_pool_display_status.restype = _UniffiRustBuffer
_UniffiLib.uniffi_cyclops_sdk_fn_func_unknown_pool_display_status.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_func_unknown_pool_display_status.restype = _UniffiRustBuffer
_UniffiLib.uniffi_cyclops_sdk_fn_method_accesstokenprovider_get_access_token.argtypes = (
    ctypes.c_uint64,
    ctypes.c_int8,
)
_UniffiLib.uniffi_cyclops_sdk_fn_method_accesstokenprovider_get_access_token.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_constructor_createclaimrequestbuilder_new.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_constructor_createclaimrequestbuilder_new.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_build.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_build.restype = _UniffiRustBuffer
_UniffiLib.uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_labels.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_labels.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_name.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_name.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_pool.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_pool.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_spec.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_method_createclaimrequestbuilder_spec.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_constructor_createpoolrequestbuilder_new.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_constructor_createpoolrequestbuilder_new.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_method_createpoolrequestbuilder_build.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_method_createpoolrequestbuilder_build.restype = _UniffiRustBuffer
_UniffiLib.uniffi_cyclops_sdk_fn_method_createpoolrequestbuilder_namespace.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_method_createpoolrequestbuilder_namespace.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_method_createpoolrequestbuilder_spec.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_method_createpoolrequestbuilder_spec.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_constructor_createsignedserviceurlrequestbuilder_new.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_constructor_createsignedserviceurlrequestbuilder_new.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_build.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_build.restype = _UniffiRustBuffer
_UniffiLib.uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_expires_in_seconds.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint32,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_expires_in_seconds.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_label.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_label.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_sandbox.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_sandbox.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_service.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_method_createsignedserviceurlrequestbuilder_service.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_fn_constructor_createtemplaterequestbuilder_new.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_fn_constructor_createtemplaterequestbuilder_new.restype = ctypes.c_uint64
